# lazycsv

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
img/: logo.xcf
include/: lazycsv.hpp
include/implementation/: find.hpp  find_generic.hpp
test/: CMakeLists.txt  main.cpp
test/inputs/: basic.csv  test2.csv
tools/: run-clang-format.sh  run-clang-tidy.sh
